--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/productio_logistics?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username = pi
-spring.datasource.password = raspberry+
+spring.datasource.password = raspberry
 
 
 ## Hibernate Properties
