--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
 
+jdk:
+  - oraclejdk8
+
 sudo: true
 
 before_install:
@@ -18,7 +21,6 @@ before_install:
   - chmod a+x ~/.docker/cli-plugins/docker-buildx
 
 script:
-  - jdk_switcher use oraclejdk8
   - mvn clean verify
 
 after_success:
