--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/productio_logistics?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url = jdbc:mysql://172.18.0.5:3306/productio_logistics?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username = pi
 spring.datasource.password = raspberry
 
