--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://172.18.0.5:3306/productio_logistics?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username = pi
-spring.datasource.password = raspberry
+spring.datasource.username = root
+spring.datasource.password = secret
 
 
 ## Hibernate Properties
