--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.jpa.hibernate.ddl-auto = update
 
 server.port=8086
 
-spring.redis.host=localhost
+spring.redis.host=redis
 spring.redis.port=6379
 redis.student.topic=studentTopic
